feat: restructure domains, enhance order logic and add room images
- Refactor: Move Hotel, Room, and User entities to specific domain packages for better Domain-Driven Design.
- Hotel & Room: Introduce `RoomImage` entity/repo to support multiple images per room. Update RoomController, Service, and Mapper.
- Orders: Optimize order creation logic, fix mapping, and update OrderResponse DTOs to handle flatten data.
- User & Auth: Add `ProviderType` entity and update `Role` enum (PROVIDER_HOTEL, PROVIDER_VENUE). Update SecurityConfig accordingly.
- Notifications: Add/Update Notification module (Entity, Repo, Service, DTO).
- Others: Minor updates to Favorites, Comments (Likes/Dislikes), and Chat modules to sync with the new entity structures.